# projekt3

./: .gitignore  README.md  main.py  projekt1.ipynb  pyproject.toml
.github/workflows/: tests.yml
data/processed/: df_ex2.csv  df_ex4.csv  monthly_PM25.csv
data/raw/: raw2014.csv  raw2015.csv  raw2018.csv  raw2019.csv  raw2024.csv
src/: 01_download.py  02_data_cleanining.py  means.py  projekt1.ipynb  utils.py  visualizations.py  z03_monthly_trends.py
tests/: test_means.py  test_visualizations.py  tests.py
