[project]
name = "projekt3"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyterlab>=4.5.1",
    "matplotlib>=3.10.8",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "plotly>=6.5.1",
    "pytest>=9.0.2",
    "seaborn>=0.13.2",
]
